--- a/themes/shoka/example/source/friends/_data.yml
+++ b/themes/shoka/example/source/friends/_data.yml
@@ -1,13 +1,13 @@
-- site: 優萌初華
-  owner: 霜月琉璃
+- site: Youmeng Chuhua
+  owner: Frost Moon Glass
   url: https://shoka.lostyu.me
-  desc: 琉璃的医学 & 编程笔记
+  desc: Ruri's Medical & Programming Notes
   image: https://fastly.jsdelivr.net/gh/amehime/shoka@latest/images/avatar.jpg
   color: "#e9546b"
 
-- site: 優萌初華
-  owner: 霜月琉璃
+- site: Youmeng Chuhua
+  owner: Frost Moon Glass
   url: https://shoka.lostyu.me
-  desc: 琉璃的医学 & 编程笔记
+  desc: Ruri's Medical & Programming Notes
   image: https://fastly.jsdelivr.net/gh/amehime/shoka@latest/images/avatar.jpg
   color: "#e9546b"
