--- a/_config.shoka.yml
+++ b/_config.shoka.yml
@@ -184,15 +184,15 @@ creative_commons:
 # Valine
 # For more information: https://github.com/amehime/MiniValine
 valine:
-  appId: #Your_appId
-  appKey: #Your_appkey
+  appId: yED4LB4IU0OvUvxbWwJDQ00Y-MdYXbMMI
+  appKey: 5KXCxwDX64CDw3BQ8zJPLa6H
   placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
   avatar: mp # Gravatar style : mp, identicon, monsterid, wavatar, robohash, retro
   pageSize: 10 # Pagination size
   lang: en
   visitor: true # Article reading statistic
   NoRecordIP: false # Whether to record the commenter IP
-  serverURLs: # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
+  serverURLs: https://yed4lb4i.api.lncldglobal.com 
   powerMode: true
   tagMeta:
     visitor: New friends
