--- a/_config.shoka.yml
+++ b/_config.shoka.yml
@@ -224,7 +224,7 @@ audio:
       - https://music.163.com/#/playlist?id=2031842656
 
 # random image api
-image_server: # "https://ryuum3gum1n.de"
+image_server: # "https://acg.xydwz.cn/api/api.php"
 
 # Algolia Search
 # For more information: https://www.algolia.com
@@ -285,19 +285,19 @@ baidu_push: false
 #! ---------------------------------------------------------------
 vendors:
   css:
-    katex: npm/katex@0.16.2/dist/katex.min.css
+    katex: npm/katex@0.16.0/dist/katex.min.css
     comment: css/comment.css
     fancybox: combine/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css,npm/justifiedGallery@3.8.1/dist/css/justifiedGallery.min.css
   js:
     pace: npm/pace-js@1.0.2/pace.min.js
     pjax: npm/pjax@0.2.8/pjax.min.js
-    fetch: npm/whatwg-fetch@3.6.2/dist/fetch.umd.min.js
-    anime: npm/animejs@3.2.1/lib/anime.min.js
-    algolia: npm/algoliasearch@4.14.2/dist/algoliasearch-lite.umd.js
-    instantsearch: npm/instantsearch.js@4.46.2/dist/instantsearch.production.min.js
-    lazyload: npm/lozad@1.16.0/dist/lozad.min.js
-    quicklink: npm/quicklink@2.3/dist/quicklink.umd.js
-    fancybox: combine/npm/jquery@3.6.1/dist/jquery.min.js,npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js,npm/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js
+    fetch: npm/whatwg-fetch@3.6.0/dist/fetch.umd.min.js
+    anime: npm/animejs@3.2.0/lib/anime.min.js
+    algolia: npm/algoliasearch@4.13/dist/algoliasearch-lite.umd.js
+    instantsearch: npm/instantsearch.js@4.41/dist/instantsearch.production.min.js
+    lazyload: npm/lozad@1.9/dist/lozad.min.js
+    quicklink: npm/quicklink@2.2/dist/quicklink.umd.js
+    fancybox: combine/npm/jquery@3.6.0/dist/jquery.min.js,npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js,npm/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js
     valine: gh/amehime/MiniValine@4.2.2/dist/MiniValine.min.js
-    copy_tex: npm/katex@0.16.2/dist/contrib/copy-tex.min.js
-    chart: npm/frappe-charts@1.6.2/dist/frappe-charts.min.umd.js
+    copy_tex: npm/katex@0.16.0/dist/contrib/copy-tex.min.js
+    chart: npm/frappe-charts@1.5.8/dist/frappe-charts.min.iife.min.js
